# liber-monitor

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
examples/: quick_demo.py
experiments/: 01_ultra_fast.py  02_complete_mnist.py  03_forced_collapse.py
liber_monitor/: __init__.py  monitor.py  utils.py
tests/: test_integration.py  test_monitor.py
